upgrade to angular 12

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,11 @@
 {
-  "projects": {
-    "default": "pocketdoc-f1700"
+  "targets": {
+    "pocketdoc-f1700": {
+      "hosting": {
+        "PocketDoc": [
+          "pocketdoc-f1700"
+        ]
+      }
+    }
   }
 }
