--- a/package.json
+++ b/package.json
@@ -5,62 +5,57 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.6",
-    "@angular/cdk": "^10.2.5",
-    "@angular/common": "~10.0.6",
-    "@angular/compiler": "~10.0.6",
-    "@angular/core": "~10.0.6",
-    "@angular/fire": "^6.0.3",
-    "@angular/forms": "~10.0.6",
-    "@angular/material": "^10.2.5",
-    "@angular/platform-browser": "~10.0.6",
-    "@angular/platform-browser-dynamic": "~10.0.6",
-    "@angular/router": "~10.0.6",
-    "@angular/service-worker": "~10.0.6",
-    "@ctrl/ngx-emoji-mart": "^4.1.0",
-    "angular-cropperjs": "^1.0.2",
+    "@angular/animations": "~12.0.1",
+    "@angular/cdk": "^12.0.1",
+    "@angular/common": "~12.0.1",
+    "@angular/compiler": "~12.0.1",
+    "@angular/core": "~12.0.1",
+    "@angular/fire": "^6.1.5",
+    "@angular/forms": "~12.0.1",
+    "@angular/material": "^12.0.1",
+    "@angular/platform-browser": "~12.0.1",
+    "@angular/platform-browser-dynamic": "~12.0.1",
+    "@angular/router": "~12.0.1",
+    "@angular/service-worker": "~12.0.1",
+    "@ctrl/ngx-emoji-mart": "^5.1.1",
     "animate.css": "^4.1.1",
-    "blueimp-canvas-to-blob": "^3.28.0",
-    "bodymovin": "^4.13.0",
     "chart.js": "^2.9.4",
-    "cropperjs": "^1.5.9",
-    "firebase": "^7.24.0",
-    "lottie-web": "^5.7.4",
+    "cropperjs": "^1.5.11",
+    "firebase": "^8.6.2",
+    "lottie-web": "^5.7.8",
     "ng-lottie": "^0.3.2",
     "ng2-charts": "^2.4.2",
-    "ng2-img-max": "^2.2.4",
     "ngx-lottie": "^6.4.0",
-    "ngx-spinner": "^10.0.1",
-    "rxjs": "~6.5.5",
+    "ngx-progressbar": "^6.1.1",
+    "rxjs": "~6.6.0",
     "shortid": "^2.2.16",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "tslib": "^2.1.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.5",
-    "@angular/cli": "~10.0.5",
-    "@angular/compiler-cli": "~10.0.6",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular-devkit/architect": ">= 0.900 < 0.1300",
+    "@angular-devkit/build-angular": "~12.0.1",
+    "@angular/cli": "~12.0.1",
+    "@angular/compiler-cli": "~12.0.1",
+    "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "firebase-tools": "^8.0.0 || ^9.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "jasmine-core": "~3.7.0",
+    "jsonc-parser": "^3.0.0",
+    "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng2-charts-schematics": "^0.1.7",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "open": "^7.0.3",
+    "typescript": "~4.2.3"
   }
 }
