--- a/angular.json
+++ b/angular.json
@@ -28,12 +28,14 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
+              "node_modules/minireset.css/minireset.css",
               "src/custom-theme.scss",
               "src/styles.css",
               "node_modules/animate.css/animate.css",
-              "node_modules/animate.css/animate.min.css"
+              "node_modules/animate.css/animate.min.css",
+              "node_modules/igniteui-angular/styles/igniteui-angular.css"
             ],
-            "scripts": [],
+            "scripts": [ "./node_modules/hammerjs/hammer.min.js"],
             "serviceWorker": true,
             "ngswConfigPath": "ngsw-config.json"
           },
@@ -101,9 +103,10 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/igniteui-angular/styles/igniteui-angular.css"
             ],
-            "scripts": []
+            "scripts": [ "./node_modules/hammerjs/hammer.min.js"]
           }
         },
         "deploy": {
