--- a/package.json
+++ b/package.json
@@ -23,11 +23,18 @@
     "@angular/router": "~12.0.1",
     "@angular/service-worker": "~12.0.1",
     "@ctrl/ngx-emoji-mart": "^5.1.1",
+    "@igniteui/material-icons-extended": "^2.7.0",
+    "@juggle/resize-observer": "^3.3.0",
     "animate.css": "^4.1.1",
     "chart.js": "^2.9.4",
+    "classlist.js": "^1.1.20150312",
     "cropperjs": "^1.5.11",
     "firebase": "^8.6.2",
+    "hammerjs": "^2.0.8",
+    "igniteui-angular": "^12.0.1",
+    "jszip": "^3.6.0",
     "lottie-web": "^5.7.8",
+    "minireset.css": "~0.0.4",
     "ng-lottie": "^0.3.2",
     "ng2-charts": "^2.4.2",
     "ngx-lottie": "^6.4.0",
@@ -35,6 +42,7 @@
     "rxjs": "~6.6.0",
     "shortid": "^2.2.16",
     "tslib": "^2.1.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -42,6 +50,8 @@
     "@angular-devkit/build-angular": "~12.0.1",
     "@angular/cli": "~12.0.1",
     "@angular/compiler-cli": "~12.0.1",
+    "@igniteui/angular-schematics": "~12.0.800",
+    "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "firebase-tools": "^8.0.0 || ^9.0.0",
